profilelist1exp/unpackaged/objects/Viper_Email_Subscription__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>User__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_APV_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send APV Notification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Viper_Email_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Viper Email Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Email__c</columns>
        <columns>Send_APV_Notification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>VES ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Viper Email Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>User_Validation</fullName>
        <active>true</active>
        <description>This field should allow only Internal Users</description>
        <errorConditionFormula>CONTAINS(User__r.Profile_Name__c, &quot;Portal&quot;)</errorConditionFormula>
        <errorMessage>Partner Users and Customer Portal Users are not allowed.  Please choose a User.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Viper_Email_Subscription_Notification</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Email__c  &lt;&gt;  $User.Email ,NOT(Contains( $Profile.Name,&apos;Marketing&apos;)))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Users are only allowed to create/ update their own email subscription.</errorMessage>
    </validationRules>
</CustomObject>